# Data-Pipeline-Incident-Response

./: .gitignore  Change_log.md  Context.md  Decisions.md  Dockerfile  Instructions.md  README.md  _cell_prompts.py  _cell_run.py  _cell_runner.py  check.py  create_qwen_1_5b_notebook.py  grpo_training_shashank.ipynb  inference.py  inference_comparison_qwen.py  inference_gemini.py  inference_gemini_round2_schema_drift.py  inference_qwen3-vl-4b_round2_schema_drift.py  inference_qwen_comparison_GRPO_vs_og.py  mini_blog_huggingface_round2.md  openenv.yaml  patch_1_5b_runner.py  patch_kaggle_notebooks.py  push_to_hf.py  pyproject.toml  requirements.txt  run_on_kaggle_LlaMa.ipynb  run_on_kaggle_comparison_qwen.ipynb  run_on_kaggle_qwen3vl.ipynb  run_on_kaggle_qwen_new.ipynb  setup_qwen.py  storytelling_pitch.md  train_grpo.py  train_grpo_general.ipynb  train_sp_edited.ipynb  training-grpo-qwen.ipynb  training_grpo.ipynb  training_grpo_qwen.ipynb  update_nb.py
files/: README_VIDEO_SECTION.md  presentation_deck_materials.md  video_script.md  video_visuals.md
inference/: gemini_inference.py
run_on_kaggle/: run-on-kaggle-comparision-qwen.ipynb  run_on_kaggle_LlaMa.ipynb  run_on_kaggle_qwen3vl.ipynb  run_on_kaggle_qwen3vl_retrain.ipynb  run_on_kaggle_qwen_1.5b.ipynb  run_on_kaggle_qwen_fixed.ipynb  run_on_kaggle_qwen_new.ipynb  run_on_kaggle_qwen_v2.ipynb
server/: app.py
src/: __init__.py  assertions.py  environment.py  models.py  pipeline_runner.py  server.py  tasks.py  try.py
train_grpo/: train_grpo.py  train_grpo_general.ipynb  train_grpo_qwen_merged.ipynb  (+6 more)
